# PYTHON_PROJECTS

./: .gitignore  .gitmodules  .windsurfrules  README.md
public/Based-Hardware-Ops/: .gitignore  README.md
public/Based-Hardware-Ops/cloud/shopify/: config.py  shopify_integrations.py
public/Based-Hardware-Ops/local/: README.md  index.py  requirements.txt
public/Based-Hardware-Ops/local/data/: flash_history.json
public/Based-Hardware-Ops/local/devices_flashing/: __init__.py  device_detector.py  firmware_flasher.py  firmware_uploader.py  flash_history.py
public/Based-Hardware-Ops/local/utils/: label_printer.py
public/CHATGPT-websearch-plugin/: OpenAPI.yaml  README.md  ai-plugin.json  main.py
public/Firebase_Data_Extractor/: main.py  pyproject.toml
public/Firebase_Data_Extractor/firebase_extract/: __init__.py  admin.py  bucket.py  firestore.py  realtime_db.py
public/agent_ops_mindsdb/: data_handler.py
public/openai_finetuning_framework/: .gitignore  build.sh  main.py  pyproject.toml  raw_notes.txt  readme.md  requirements.txt
public/openai_finetuning_framework/creator/: creative_brainstorm.md  index.py
public/openai_finetuning_framework/openai_config/: api_key_manager.py  upload_openai.py
repo_documentation/: branches_20241227_145106.txt  branches_20241227_145136.txt  commits_20241227_145106.txt  commits_20241227_145136.txt
scripts/: cleanup_original_repo.sh  encrypt_repo_files.sh  git_smart.sh  init_repos.sh  migrate_github_repos.sh  migrate_solar_ops.sh  setup_gpg.sh  setup_monorepo.sh  setup_submodules.sh
(+1 files in other folders)
